feat: instruction screen added

--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,10 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Dashboard para visualização de dados do projeto Peat no IFCE.">
+  <meta name="description" content="Dashboard para visualização de dados do projeto Peat.">
 
-  <meta property="og:title" content="Peat IFCE">
-  <meta property="og:description" content="Dashboard para visualização de dados do projeto Peat no IFCE.">
+  <meta property="og:title" content="Peat">
+  <meta property="og:description" content="Dashboard para visualização de dados do projeto Peat.">
   <meta property="og:url" content="https://peatifce.ddns.net">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://peatifce.ddns.net/favicon.png">
@@ -14,13 +14,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Peat IFCE">
+  <meta name="apple-mobile-web-app-title" content="Peat">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>Peat IFCE</title>
+  <title>Peat</title>
   <link rel="manifest" href="manifest.json">
   <style id="splash-screen-style">
     html {
@@ -102,4 +102,6 @@
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
   <script src="flutter_bootstrap.js" async=""></script>
+
+
 </body></html>
